Update zip_app_images.sh
Add additional deploy type for macOS which provides only the jars and a starter script. A java Runtime >= 18.0.2 is required